retrieve SessionService objects belong to all authenticated users from scheduler